tests/error/array_err3.gw
#! [contains] partially empty array init
var int i[][3];
